<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small" >

        <TableRow>
            <TextView
                style="@style/ThreadViolationStatsTableKey"
                android:text="@string/thread_violation_stats_times_occurred" />
            <TextView
                style="@style/ThreadViolationStatsTableValue"
                android:id="@+id/size" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/ThreadViolationStatsTableKey"
                android:text="@string/thread_violation_stats_total_duration" />
            <TextView
                style="@style/ThreadViolationStatsTableValue" 
                android:id="@+id/total_duration" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/ThreadViolationStatsTableKey"
                android:text="@string/thread_violation_stats_min_duration" />
            <TextView
                style="@style/ThreadViolationStatsTableValue"
                android:id="@+id/min_duration" />
        </TableRow>

        <TableRow>
            <TextView
                style="@style/ThreadViolationStatsTableKey"
                android:text="@string/thread_violation_stats_max_duration" />
            <TextView
                style="@style/ThreadViolationStatsTableValue"
                android:id="@+id/max_duration"/>
        </TableRow>

        <TableRow>
            <TextView
                style="@style/ThreadViolationStatsTableKey"
                android:text="@string/thread_violation_stats_avg_duration" />
            <TextView
                style="@style/ThreadViolationStatsTableValue"
                android:id="@+id/avg_duration"/>
        </TableRow>
        
    </TableLayout>
    
    <View 
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pixel"
        android:background="#999999"/>

</LinearLayout>