<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/pixel" 
        android:background="#888888"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xsmall">
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" 
            android:gravity="center" >            
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/total_violations_title" />
            
            <TextView 
                android:id="@+id/violation_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/xsmall" 
                android:text="@string/na" />
            
        </LinearLayout>
        
        <View
            android:layout_width="@dimen/pixel"
            android:layout_height="fill_parent" 
            android:background="#888888"/>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" 
            android:gravity="center" > 
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/unique_violation_title" />
            
            <TextView 
                android:id="@+id/violation_group_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:layout_marginLeft="@dimen/xsmall"
                android:text="@string/na" />
            
        </LinearLayout>
        
    </LinearLayout>
    
</LinearLayout>